Fixed bug with navigation on mobile

--- a/www/_css/_menu.css
+++ b/www/_css/_menu.css
@@ -525,7 +525,7 @@
 	.header__searchButton,
 	.header__userButton,
 	.header__readLater {
-		display: none;
+		display: none !important;
 	}
 }
 @media screen and (min-width: 1024px) and (max-width: 1040px) {
